# ardupilot_gz

./: .pre-commit-config.yaml  README.md  humble_gz_macos.repos  jazzy_gz.repos  jazzy_gz_macos.repos  ros2_gz.repos  ros2_gz_macos.repos
.github/: .mergify.yml
ardupilot_gui/: package.xml  setup.cfg  setup.py
ardupilot_gui/ardupilot_gui/: __init__.py  ardupilot_node.py  gui.py  main.py  mavlinkutils.py  ros_thread.py
ardupilot_gui/launch/: ardupilot_gui.launch.py
ardupilot_gui/resource/: ardupilot_gui
ardupilot_gz_application/: CMakeLists.txt  package.xml
ardupilot_gz_arm_moveit/: CMakeLists.txt  package.xml
ardupilot_gz_arm_moveit/config/: arm_joint_bridge.yaml  controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
ardupilot_gz_arm_moveit/launch/: arm_standalone.launch.py  iris_arm_gazebo.launch.py  iris_arm_rviz.launch.py
ardupilot_gz_arm_moveit/rviz/: iris_arm_moveit.rviz  view_robot.rviz
ardupilot_gz_arm_moveit/scripts/: moveit_to_gz_bridge.py
ardupilot_gz_arm_moveit/srdf/: iris_with_arm.srdf  learm.srdf.xacro
ardupilot_gz_arm_moveit/urdf/: learm.urdf.xacro
ardupilot_gz_bringup/: CMakeLists.txt  package.xml
ardupilot_gz_bringup/config/: blueboat_bridge.yaml  iris.rviz  iris_2Dlidar_bridge.yaml  iris_3Dlidar_bridge.yaml  iris_bridge.yaml  iris_lidar_bridge.yaml  iris_waypoints.txt  r1_rover_bridge.yaml  wildthumper_bridge.yaml
ardupilot_gz_bringup/launch/: apm_config.yaml  blueboat_waves.launch.py  bringup_iris.launch.py  diff_drive.launch.py  iris.launch.py  iris_arm_runway.launch.py  iris_maze.launch.py  iris_runway.launch.py  iris_warehouse.launch.py  multiagent.launch.py  r1_rover_runway.launch.py  wildthumper_playpen.launch.py
ardupilot_gz_bringup/launch/robots/: blueboat.launch.py  iris.launch.py  iris_arm.launch.py  iris_lidar.launch.py  r1_rover.launch.py  robot.launch.py  wildthumper.launch.py
ardupilot_gz_bringup/rviz/: iris.rviz  iris_with_lidar.rviz  wildthumper.rviz
ardupilot_gz_description/: CMakeLists.txt  package.xml
ardupilot_gz_description/hooks/: ardupilot_gz_description.dsv.in  ardupilot_gz_description.sh.in
ardupilot_gz_description/models/: README.md
ardupilot_gz_description/models/diff_drive/: model.sdf
ardupilot_gz_description/models/iris_sitl_viewer/: model.config  model.sdf
ardupilot_gz_description/models/iris_with_2d_lidar/: model.config  model.sdf
ardupilot_gz_description/models/iris_with_3d_lidar/: model.config  model.sdf
ardupilot_gz_description/models/iris_with_arm/: model.config  model.sdf
ardupilot_gz_description/models/iris_with_lidar/: model.config  model.sdf
ardupilot_gz_description/models/learm/: model.config  model.sdf
ardupilot_gz_description/models/learm/meshes/: base.stl  carpal-left.stl  carpal-right.stl  finger.stl  forearm.stl  humerus.stl  shoulder.stl  tendon.stl
ardupilot_gz_description/models/lidar_2d/: model.config  model.sdf
ardupilot_gz_description/models/lidar_3d/: model.config  model.sdf
ardupilot_gz_gazebo/: .flake8  CMakeLists.txt  package.xml
ardupilot_gz_gazebo/include/ardupilot_gz_gazebo/: BasicSystem.hh  FullSystem.hh
ardupilot_gz_gazebo/src/: BasicSystem.cc  FullSystem.cc
ardupilot_gz_gazebo/worlds/: arm_world.sdf  blueboat_waves.sdf  diff_drive.sdf  iris.sdf  iris_maze.sdf  iris_runway.sdf  iris_viewer.sdf  iris_warehouse.sdf  maze.sdf  playpen.sdf  r1_rover_runway.sdf  runway.sdf  warehouse.sdf  wildthumper_playpen.sdf
ardupilot_gz_sitl_viewer/: CMakeLists.txt  package.xml
ardupilot_gz_sitl_viewer/src/: SitlViewer.cpp  SitlViewerNode.cpp
mavros_control/: package.xml  setup.cfg  setup.py
mavros_control/mavros_control/: guided_mission.py  onlineIPP.py
