<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ardupilot_gz_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo specific systems for `ardupilot_gz`.</description>
  <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
  <license>GPL-3.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gz-common5</depend>
  <depend>gz-cmake3</depend>
  <depend>gz-plugin2</depend>

  <!-- Garden -->
  <depend condition="$GZ_VERSION == garden">gz-sim7</depend>
  <!-- Harmonic (default) -->
  <depend condition="$GZ_VERSION == ''">gz-sim8</depend>
  <depend condition="$GZ_VERSION == harmonic">gz-sim8</depend>

  <test_depend>ament_lint_auto</test_depend>
  <!-- <test_depend>ament_lint_common</test_depend> -->
  <!-- <test_depend>ament_cmake_clang_format</test_depend> -->
  <!-- <test_depend>ament_cmake_clang_tidy</test_depend> -->
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_mypy</test_depend>
  <test_depend>ament_cmake_pclint</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_pycodestyle</test_depend>
  <!-- <test_depend>ament_cmake_uncrustify</test_depend> -->
  <test_depend>ament_cmake_xmllint</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
